stockholding endpoint
