# inbound-controller-ws/src/main/java/fsa/stocks/controller/AccountController.java
@@ -1,21 +1,22 @@
 package fsa.stocks.controller;
 
+import fsa.stocks.domain.StockHolding;
 import fsa.stocks.domain.Transaction;
 import fsa.stocks.domain.enums.StockSymbol;
 import fsa.stocks.domain.service.AccountFacade;
 import fsa.stocks.domain.service.PortfolioFacade;
+import fsa.stocks.mapper.StockHoldingMapper;
 import fsa.stocks.mapper.TransactionMapper;
 import fsa.stocks.rest.api.BankApi;
 import fsa.stocks.rest.api.InvestmentApi;
-import fsa.stocks.rest.dto.AmountDto;
-import fsa.stocks.rest.dto.BuyRequestDto;
-import fsa.stocks.rest.dto.SellRequestDto;
-import fsa.stocks.rest.dto.TransactionDto;
+import fsa.stocks.rest.dto.*;
 import fsa.stocks.security.oauth2_jwt.CurrentUserDetailService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.math.BigDecimal;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 public class AccountController implements BankApi, InvestmentApi {
@@ -24,13 +25,16 @@ public class AccountController implements BankApi, InvestmentApi {
     private final PortfolioFacade portfolioFacade;
     private final CurrentUserDetailService currentUser;
     private final TransactionMapper transactionMapper;
+    private final StockHoldingMapper stockHoldingMapper;
 
     public AccountController(AccountFacade accountFacade, PortfolioFacade portfolioFacade,
-                             CurrentUserDetailService currentUser, TransactionMapper transactionMapper) {
+                             CurrentUserDetailService currentUser, TransactionMapper transactionMapper, StockHoldingMapper stockHoldingMapper) {
         this.accountFacade = accountFacade;
         this.portfolioFacade = portfolioFacade;
         this.currentUser = currentUser;
         this.transactionMapper = transactionMapper;
+        this.stockHoldingMapper = stockHoldingMapper;
+
     }
 
     @Override
@@ -74,6 +78,19 @@ public class AccountController implements BankApi, InvestmentApi {
         Transaction tx = portfolioFacade.sellStock(uid, StockSymbol.valueOf(dto.getSymbol().name()),
                 dto.getShares());
         return ResponseEntity.ok(transactionMapper.toDto(tx));
+    }
+
+    @Override
+    public ResponseEntity<List<StockHoldingDto>> getPortfolioHoldings() {
+        long uid = currentUser.getUserId();
+        List<StockHolding> holdings = portfolioFacade.getHoldingsForUser(uid);
+        if (holdings.isEmpty()) {
+            return ResponseEntity.noContent().build();
+        }
+        List<StockHoldingDto> dtos = holdings.stream()
+                .map(stockHoldingMapper::toDto)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(dtos);
     }
 
 }
